--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "meetup-clone",
+    "name": "grand-line-gatherings",
     "version": "1.0.0",
     "description": "## Database Schema Design",
     "main": "index.js",
